--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hal Photography</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylenew.css">
 </head>
-<body id="wrapper">
-    <div class="main-nav">
+
+<body>
+    <!-- Navigation Bar -->
+    <nav class="main-nav">
         <p class="name">Hal Xing</p>
         <ul class="collections">
             <li class="current"><a>VANISHING FACTORY</a></li>
@@ -22,9 +24,11 @@
             <a href="https://www.instagram.com/hal_xing/" class="inst">@hal_xing</a>
             </p>
         </div>
-    </div>
-    <div class="slide">
-        <div class="contents">
+    </nav>
+
+    <!-- Image Gallery -->
+    <section class="image-gallery">
+        <div id="gallery-contents" class="contents">
             <img src="img\factory\01.jpg" class="photo">
             <img src="img\factory\02.jpg" class="photo">
             <img src="img\factory\03.jpg" class="photo">
@@ -36,11 +40,17 @@
             <img src="img\factory\09.jpg" class="photo">
             <img src="img\factory\10.jpg" class="photo">
         </div>
-    </div>
+    </section>
+
+    <!-- Landscape Mode Warning -->
     <div id="warning-message">
-        <p> This website is only viewable in landscape mode. </p><br>
-        <p> 回転ロックを解除し、携帯のスクリーンを横にしてご覧ください。</p><br>
-        <p> 请用横屏打开本网站。</p><br>
+        <p>This website is only viewable in landscape mode.</p><br>
+        <p>回転ロックを解除し、携帯のスクリーンを横にしてご覧ください。</p><br>
+        <p>请用横屏打开本网站。</p><br>
     </div>
+
+    <script src="code.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3658841895184012"
+     crossorigin="anonymous"></script>
 </body>
 </html>
