--- a/modeled_nightscape.html
+++ b/modeled_nightscape.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hal Photography</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="stylenew.css">
 
 </head>
 <body>
@@ -25,6 +25,45 @@
     </div>
     <div class="slide">
         <div class="contents">
+
+        </div>
+    </div>
+</body>
+</html> -->
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hal Photography</title>
+    <link rel="stylesheet" href="stylenew.css">
+</head>
+
+<body>
+    <!-- Navigation Bar -->
+    <nav class="main-nav">
+        <p class="name">Hal Xing</p>
+        <ul class="collections">
+            <li class="current"><a>VANISHING FACTORY</a></li>
+            <li><a href="index.html" class="visited">VANISHING FACTORY</a></li>
+            <li class="current"><a>MODELED NIGHTSCAPES</a></li>
+            <li><a href="universe.html" class="visited">DROPPED UNIVERSE</a></li>
+        </ul>
+        <div class="contact">
+            <p><a class="large">Contact</a><br>
+            yuehaoxing@gmail.com<br>
+            Inst 
+            <a href="https://www.instagram.com/hal_xing/" class="inst">@hal_xing</a>
+            </p>
+        </div>
+    </nav>
+
+    <!-- Image Gallery -->
+    <section class="image-gallery">
+        <div id="gallery-contents" class="contents">
             <img src="img\minamino\01.jpg" class="photo">
             <img src="img\minamino\02.jpg" class="photo">
             <img src="img\minamino\03.jpg" class="photo">
@@ -39,6 +78,15 @@
             <img src="img\minamino\12.jpg" class="photo">
             <img src="img\minamino\13.jpg" class="photo">
         </div>
+    </section>
+
+    <!-- Landscape Mode Warning -->
+    <div id="warning-message">
+        <p>This website is only viewable in landscape mode.</p><br>
+        <p>回転ロックを解除し、携帯のスクリーンを横にしてご覧ください。</p><br>
+        <p>请用横屏打开本网站。</p><br>
     </div>
+
+    <script src="code.js"></script>
 </body>
 </html>
