--- a/universe.html
+++ b/universe.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hal Photography</title>
     <link rel="stylesheet" href="stylenew.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3658841895184012"
+     crossorigin="anonymous"></script>
 </head>
 <body id="wrapper">
     <div class="main-nav">
