--- a/ads.html
+++ b/ads.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="stylenew.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3658841895184012"
      crossorigin="anonymous"></script>
-     <style>
+    <style>
         .privacy-bar {
             position: fixed;
             bottom: 0;
@@ -26,6 +26,50 @@
             color: black;
             padding: 20px;
             border-top: 1px solid #ccc;
+        }
+        .main-nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 250px;
+            height: 100%;
+            background-color: #333;
+            color: white;
+            padding: 20px;
+            box-shadow: 2px 0 5px rgba(0,0,0,0.5);
+            z-index: 1000;
+        }
+        .main-nav .name {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
+        .main-nav .collections {
+            list-style: none;
+            padding: 0;
+        }
+        .main-nav .collections li {
+            margin-bottom: 10px;
+        }
+        .main-nav .collections a {
+            color: white;
+            text-decoration: none;
+        }
+        .main-nav .collections a:hover {
+            text-decoration: underline;
+        }
+        .main-nav .contact {
+            margin-top: 20px;
+        }
+        .main-nav .contact a {
+            color: white;
+            text-decoration: none;
+        }
+        .main-nav .contact a:hover {
+            text-decoration: underline;
+        }
+        .ads-section, .privacy-content {
+            margin-left: 270px; /* Adjust based on the width of the side menu */
+            padding: 20px;
         }
     </style>
 </head>
