--- a/ground-breaking.html
+++ b/ground-breaking.html
@@ -6,6 +6,7 @@
     <title>Image Connector</title>
     <style>
         body {
+            background-color: black;
             overflow: hidden; /* Disable all scrolling */
             height: 100vh;
             margin: 0;
