ground-breaking fix

--- a/ground-breaking.html
+++ b/ground-breaking.html
@@ -4,264 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Connector</title>
-    <style>
-        body {
-            background-color: black;
-            overflow: hidden; /* Disable all scrolling */
-            height: 100vh;
-            margin: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative; /* Ensure body is positioned correctly */
-        }
-        .image-container {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .image-wrapper {
-            position: absolute;
-            width: 500px; /* Adjusted to match the resized dimensions */
-            height: 500px; /* Adjusted to match the resized dimensions */
-            transition: transform 1s ease; /* Smooth transition for translation */
-        }
-        .image-wrapper img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover; /* Ensure images fit within the square */
-        }
-        .scroll-container {
-            position: absolute; /* Changed to absolute */
-            min-width: 100vw; /* Adjust dynamically based on total image width */
-            height: 100%;
-            transition: transform 0.5s ease; /* Smooth transition for translation */
-            z-index: 10; /* Ensure it is on top */
-        }
-    </style>
+    <link rel="stylesheet" href="css/ground-breaking.css">
 </head>
 <body>
     <div id="scroll-container" class="scroll-container">
         <div id="image-container" class="image-container"></div>
     </div>
-    <script>
-        class ImageScroller {
-            constructor(imageFolder, jsonFile, containerId) {
-                this.imageFolder = imageFolder;
-                this.jsonFile = jsonFile;
-                this.container = document.getElementById(containerId);
-                this.imageContainer = this.container.querySelector('.image-container');
-                this.scrollPosition = 0;
-                this.scrollSpeed = 60; // pixels per second
-                this.imagesPerPage = 10;
-                this.processedIndices = new Set();
-                this.lastLoadedIndex = 0;
-            }
-
-            async init() {
-                console.log("init called");
-                const data = await this.loadJSON(this.jsonFile);
-                this.imagePaths = Object.keys(data).map(fileName => `${this.imageFolder}/${fileName}`);
-                this.data = data;
-                console.log("Image paths:", this.imagePaths);
-
-                // Load initial images (2 pages worth)
-                const initialLoadCount = this.imagesPerPage * 2;
-                for (let i = 0; i < initialLoadCount && i < this.imagePaths.length; i++) {
-                    this.processImage(i, null, null);
-                }
-                this.lastLoadedIndex = initialLoadCount;
-
-                // Start scrolling
-                this.scrollImages();
-
-                // Re-trigger updateImagePositions on viewport resize
-                let resizeTimeout;
-                window.addEventListener('resize', () => {
-                    clearTimeout(resizeTimeout);
-                    resizeTimeout = setTimeout(() => this.updateImagePositions(), 200);
-                });
-            }
-
-            async loadJSON(url) {
-                const response = await fetch(url);
-                return response.json();
-            }
-
-            processImage(index, prevPoint, prevWrapper) {
-                if (index >= this.imagePaths.length) {
-                    index = 0; // Loop back to the first image
-                }
-
-                if (this.processedIndices.has(index)) {
-                    console.log("All images processed or already processed.");
-                    return;
-                }
-
-                this.processedIndices.add(index);
-                console.log(`Processing image at index ${index}: ${this.imagePaths[index]}`);
-
-                const imageWrapper = document.createElement('div');
-                imageWrapper.className = 'image-wrapper';
-                imageWrapper.dataset.index = index; // Store the index in the dataset
-
-                const img = document.createElement('img');
-                img.src = `${this.imagePaths[index]}`;
-                img.onload = () => {
-                    const currPoints = this.data[this.imagePaths[index].split('/').pop()];
-                    if (currPoints && currPoints.length > 0) {
-                        if (!this.hasTopAndBottomPoints(currPoints, img.naturalHeight)) {
-                            console.log(`Skipping image: ${this.imagePaths[index]} (missing top or bottom point)`);
-                            setTimeout(() => {
-                                this.processImage(index + 1, prevPoint, prevWrapper);
-                            }, 0);
-                            return;
-                        }
-
-                        const firstPoint = currPoints[0];
-                        const lastPoint = currPoints[currPoints.length - 1];
-
-                        console.log(`First point: ${JSON.stringify(firstPoint)}, Last point: ${JSON.stringify(lastPoint)}`);
-
-                        if (index > 0 && prevPoint && prevWrapper) {
-                            // Connect the bottom point of the previous image to the top point of the current image
-                            const currPoint = firstPoint;
-                            const prevPointToUse = prevPoint;
-
-                            // Adjust points to fit within the 500px square
-                            const currX = (currPoint[0] / img.naturalWidth) * 500;
-                            const currY = (currPoint[1] / img.naturalHeight) * 500;
-
-                            // Calculate the new position of the current image
-                            const newX = prevWrapper.offsetLeft + prevPointToUse.x - currX;
-                            const newY = prevWrapper.offsetTop + prevPointToUse.y - currY;
-
-                            // Ensure the image is positioned in the direction of extension
-                            imageWrapper.style.left = `${newX}px`;
-                            imageWrapper.style.top = `${newY}px`;
-
-                            // Determine z-index based on distance from the edge
-                            const prevPointDistance = this.distanceFromEdge(prevPointToUse, img.naturalWidth, img.naturalHeight);
-                            const currPointDistance = this.distanceFromEdge(currPoint, img.naturalWidth, img.naturalHeight);
-                            if (prevPointDistance.yDistance < currPointDistance.yDistance) {
-                                imageWrapper.style.zIndex = 1; // Display on top
-                            } else {
-                                prevWrapper.style.zIndex = 1; // Display previous image on top
-                            }
-                        }
-
-                        // Update prevPoint and prevWrapper for the next iteration
-                        prevPoint = {
-                            x: (lastPoint[0] / img.naturalWidth) * 500,
-                            y: (lastPoint[1] / img.naturalHeight) * 500
-                        };
-                        prevWrapper = imageWrapper;
-
-                        // Store points data in the image element for later use
-                        img.dataset.points = JSON.stringify(currPoints);
-                    }
-
-                    imageWrapper.appendChild(img);
-                    this.imageContainer.appendChild(imageWrapper);
-
-                    // Process the next image after a short delay
-                    setTimeout(() => {
-                        this.processImage(index + 1, prevPoint, prevWrapper);
-                    }, 20); // 20 milliseconds
-                };
-
-                img.onerror = () => {
-                    console.error(`Failed to load image: ${this.imagePaths[index]}`);
-                    // Skip to the next image if the current one fails to load
-                    this.processImage(index + 1, prevPoint, prevWrapper);
-                };
-
-                // Append the image wrapper to the container
-                this.imageContainer.appendChild(imageWrapper);
-            }
-
-            hasTopAndBottomPoints(points, height) {
-                const topThreshold = height * 0.05;
-                const bottomThreshold = height * 0.95;
-
-                const hasTopPoint = points.some(p => p[1] <= topThreshold);
-                const hasBottomPoint = points.some(p => p[1] >= bottomThreshold);
-
-                return hasTopPoint && hasBottomPoint;
-            }
-
-            distanceFromEdge(point, width, height) {
-                const xDistance = Math.min(point[0], width - point[0]);
-                const yDistance = Math.min(point[1], height - point[1]);
-                return { xDistance, yDistance };
-            }
-
-            updateImagePositions() {
-                console.log("updateImagePositions called");
-                const wrappers = Array.from(this.imageContainer.getElementsByClassName('image-wrapper'));
-
-                const middleY = window.innerHeight / 2;
-
-                let closestWrapper = null;
-                let closestDistance = Infinity;
-
-                wrappers.forEach(wrapper => {
-                    const rect = wrapper.getBoundingClientRect();
-                    const wrapperCenterY = rect.top + rect.height / 2;
-                    const distance = Math.abs(wrapperCenterY - middleY);
-
-                    if (distance < closestDistance) {
-                        closestDistance = distance;
-                        closestWrapper = wrapper;
-                    }
-                });
-
-                if (closestWrapper) {
-                    const rect = closestWrapper.getBoundingClientRect();
-                    const wrapperCenterX = rect.left + rect.width / 2;
-                    const windowCenterX = window.innerWidth / 2;
-                    const offsetX = windowCenterX - wrapperCenterX;
-                    console.log(`Current Middle Image: ${closestWrapper.querySelector('img') ? closestWrapper.querySelector('img').src : 'undefined'}`);
-                    console.log(`Offset X: ${offsetX}`);
-                    this.container.style.transform = `translateX(${offsetX}px)`;
-                    console.log(`Container transform: translateX(${offsetX}px), viewport width: ${window.innerWidth}`);
-
-                    // Remove images that are more than 5 indices above the current image index
-                    const currentIndex = parseInt(closestWrapper.dataset.index, 10);
-                    wrappers.forEach(wrapper => {
-                        const index = parseInt(wrapper.dataset.index, 10);
-                        if (index < currentIndex - 5) {
-                            wrapper.remove();
-                        }
-                    });
-                } else {
-                    console.log("No closestWrapper found");
-                }
-            }
-
-            scrollImages() {
-                this.scrollPosition += (this.scrollSpeed / 20);
-                this.imageContainer.style.transform = `translateY(-${this.scrollPosition}px)`;
-                this.updateImagePositions();
-
-                // Loop the scroll position
-                if (this.scrollPosition > this.imageContainer.scrollHeight - window.innerHeight) {
-                    this.scrollPosition = 0;
-                }
-
-                requestAnimationFrame(() => this.scrollImages());
-            }
-        }
-
-        const imageScroller = new ImageScroller(
-            'img/ground_breaking/v1/finished',
-            'img/ground_breaking/v1/marked_points.json',
-            'scroll-container'
-        );
-        imageScroller.init();
-    </script>
+    <div id="debug-info"></div>
+    
+    <script src="js/ground-breaking.js"></script>
 </body>
 </html>
