update to include Nai Ken Ten Kai

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <ul class="menu">
                 <li><a href="/web-projects/ground-breaking/">Ground Breaking</a></li>
                 <li><a href="/web-projects/receipt-printer/">Receipt Printer</a></li>
+                <li><a href="https://nai-ken-ten-kai.github.io/" rel="noopener">Nai Ken Ten Kai</a></li>
             </ul>
 
             <!-- Photography becomes Other Projects -->
@@ -58,6 +59,7 @@
                 <ul class="menu">
                     <li><a href="/web-projects/ground-breaking/">Ground Breaking</a></li>
                     <li><a href="/web-projects/receipt-printer/">Receipt Printer</a></li>
+                    <li><a href="https://nai-ken-ten-kai.github.io/" rel="noopener">Nai Ken Ten Kai</a></li>
                 </ul>
 
                 <!-- Photography becomes Other Projects -->
